add comand for comfortible run according task

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "playlistapptest",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test":" npx playwright test  --project=chromium",
+    "test:ui":"npx playwright test --ui"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
